[tool.poetry]
name = "backend-xijia"
version = "0.1.0"
description = "backend test for xijia"
authors = ["Jecksu <330294766@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
nibabel = "^5.2.1"
simpleitk = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
